--- a/index.html
+++ b/index.html
@@ -18,15 +18,22 @@
         var canvas = document.querySelector("canvas");
         var ctx = canvas.getContext("2d");
 
+        var red = 0;
+        var green = 0;
+        var blue = 0;
+
         function customManipulation() {
             var imageData = ctx.getImageData(0,0, 500, 329);
             var length = imageData.data.length / 4;
-            for (var i = 0; i < length; i++){
-                imageData.data[i * 4 + 0] = 55 - imageData.data[i * 4 + 0];    //Red
-                imageData.data[i * 4 + 1] = 200 - imageData.data[i * 4 + 1];   //Green
-                imageData.data[i * 4 + 2] = 100 - imageData.data[i * 4 + 2];   //Blue
+            if (red != 0 || green != 0 || blue != 0) {
+                for (var i = 0; i < length; i++){
+                    imageData.data[i * 4 + 0] = red - imageData.data[i * 4 + 0];    //Red
+                    imageData.data[i * 4 + 1] = green - imageData.data[i * 4 + 1];   //Green
+                    imageData.data[i * 4 + 2] = blue - imageData.data[i * 4 + 2];   //Blue
+                }
+                ctx.putImageData(imageData, 0, 0);
             }
-            ctx.putImageData(imageData, 0, 0);
+            console.log(red, green, blue);
         }
 
         var image = new Image();
@@ -39,16 +46,25 @@
         function updateRed(slideAmount) {
             var sliderDiv = document.getElementById("r");
             sliderDiv.innerHTML = slideAmount;
+            red = slideAmount;
+            ctx.drawImage(image, 0, 0);
+            customManipulation();
         }
 
         function updateGreen(slideAmount) {
             var sliderDiv = document.getElementById("g");
             sliderDiv.innerHTML = slideAmount;
+            green = slideAmount;
+            ctx.drawImage(image, 0, 0);
+            customManipulation();
         }
 
         function updateBlue(slideAmount) {
             var sliderDiv = document.getElementById("b");
             sliderDiv.innerHTML = slideAmount;
+            blue = slideAmount;
+            ctx.drawImage(image, 0, 0);
+            customManipulation();
         }
     </script>
 </body>
